@@ -1,10 +1,12 @@
-MD5 917673d1bfe1a81a113ae9fa3ed55135 ChangeLog 1871
+MD5 b929a0985ed34e585a7952aebd02aba8 ChangeLog 2034
 MD5 23ec60d5040f966fda250a47d8903428 metadata.xml 252
 MD5 b25e5ad259e28bab5d8d3b4c0a62d278 xen-2.0.7.ebuild 2853
 MD5 916e692537638b6382c0feda6bda89d1 xen-3.0.0_pre20051010.ebuild 2012
+MD5 e55170a9bc3648d438ba60cd80b3daee xen-3.0.0_pre20051010-r1.ebuild 2032
 MD5 16d372298e94a8eef72c1943b1ed5561 files/xend-conf 347
 MD5 b659e1e802207d647698236ddbc2e7a3 files/xend-init 838
 MD5 11ef318e35fcfed12931f182fc01955a files/xendomains-conf 180
 MD5 a8399d2d398bb05f40dd3e9bf4332af1 files/xendomains-init 1663
 MD5 7c6c9b0e7a2a6c7598fc2840e95de285 files/digest-xen-3.0.0_pre20051010 75
+MD5 7c6c9b0e7a2a6c7598fc2840e95de285 files/digest-xen-3.0.0_pre20051010-r1 75
 MD5 6eaea330ed78459069eb5ba608e654dd files/digest-xen-2.0.7 63
