@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/xen
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen/ChangeLog,v 1.9 2005/10/10 16:43:02 chrb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen/ChangeLog,v 1.10 2005/10/26 15:26:51 chrb Exp $
+
+*xen-3.0.0_pre20051010-r1 (26 Oct 2005)
+
+  26 Oct 2005; Chris Bainbridge <chrb@gentoo.org>
+  +xen-3.0.0_pre20051010-r1.ebuild:
+  added depend on sys-devel/dev86
 
 *xen-3.0.0_pre20051010 (10 Oct 2005)
 
